# CodeCrafter

./: .gitignore  LICENSE  README.md
Maths/: fibonacci.cpp  fibonacci.hpp
Maths/cosine/: CMakeLists.txt  cosine.cpp  cosine.hpp
Maths/fibonacci/: Makefile  main.cpp
app/: CMakeLists.txt
app/algo/sort/: BubbleSort.hpp  CMakeLists.txt  SelectionSort.hpp  SortBase.hpp
app/lib/: CMakeLists.txt
app/lib/common/: Algorithms.hpp  CMakeLists.txt  DummyClass.cpp  DummyClass.hpp
app/lib/test/: CMakeLists.txt
app/math/: CMakeLists.txt
app/math/complex/: CMakeLists.txt  Complex.cpp  Complex.hpp
app/math/cosine/: main.cpp
app/tests/: CMakeLists.txt
app/tests/benchmark/: CMakeLists.txt  TestSortBenchmark.cpp
app/tests/plot/: CMakeLists.txt  main.cpp
app/tests/test/: CMakeLists.txt
app/tests/test/common/: CMakeLists.txt  TestCommonLib.cpp
app/tests/test/math/: CMakeLists.txt  TestMathLib.cpp
app/tests/test/sort/: CMakeLists.txt  TestSortAlgos.cpp
